# just-pdf-reader

./: .gitignore  README.md  alembic.ini  conftest.py  pyproject.toml
.kiro/specs/ai-ebook-reader/: .config.kiro  design.md  requirements.md  tasks.md
docs/: architecture.md  build-guide.md  debug-setup.md  debugging-guide.md  development-guide.md  flows.md  startup-flow.md
migrations/: env.py
migrations/versions/: 20240101_000000_0001_initial_schema.py
src/: __init__.py  main.py
src/ai_ebook_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/application/: __init__.py  app.py
src/application/services/: __init__.py  annotation_service.py  dictionary_service.py  knowledge_graph_service.py  library_service.py  plugin_service.py  reader_service.py  search_service.py  spaced_repetition_service.py  vocabulary_service.py
src/domain/: __init__.py  enums.py  models.py  value_objects.py
src/domain/algorithms/: __init__.py  base.py  fsrs.py  sm2.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  engine.py  fts.py  migrations.py  (+2 more)
src/presentation/: __init__.py  shortcuts.py
tests/unit/: test_annotation_controller.py  test_annotation_repository.py  test_annotation_service.py  test_book_repository.py  test_database_models.py  test_domain_models.py  test_epub_reader_backend.py  test_epub_reader_controller.py  test_fts.py  test_library_controller.py  test_library_service.py  test_metadata_extractor.py  test_migrations.py  test_pdf_reader_backend.py  test_pdf_toc_and_search.py  test_project_setup.py
(+54 files in other folders)
