[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ebook-reader"
version = "0.1.0"
description = "AI Ebook Reader & Vocabulary Learning Platform"
requires-python = ">=3.11"
dependencies = [
    "PySide6==6.11.1",
    "PyMuPDF==1.27.2",
    "SQLAlchemy==2.0.51",
    "alembic==1.13.2",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "hypothesis==6.108.5",
    "pytest-asyncio==0.23.8",
    "pytest-qt==4.4.0",
]

[project.scripts]
ai-ebook-reader = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "property: Property-based tests",
    "integration: Integration tests",
]

[tool.hypothesis]
database_backend = "directory"
